# config/engine.conf/src/main/java/io/aklivity/zilla/config/engine/SchemaConfigBuilder.java
@@ -25,6 +25,7 @@ public class SchemaConfigBuilder<T> extends ConfigBuilder<T, SchemaConfigBuilder
     private String subject;
     private int id;
     private String record;
+    private OverlayConfig overlay;
 
     public SchemaConfigBuilder(
         Function<SchemaConfig, T> mapper)
@@ -74,9 +75,21 @@ public class SchemaConfigBuilder<T> extends ConfigBuilder<T, SchemaConfigBuilder
         return this;
     }
 
+    public OverlayConfigBuilder<SchemaConfigBuilder<T>> overlay()
+    {
+        return new OverlayConfigBuilder<>(this::overlay);
+    }
+
+    public SchemaConfigBuilder<T> overlay(
+        OverlayConfig overlay)
+    {
+        this.overlay = overlay;
+        return this;
+    }
+
     @Override
     public T build()
     {
-        return mapper.apply(new SchemaConfig(strategy, subject, version, id, record));
+        return mapper.apply(new SchemaConfig(strategy, subject, version, id, record, overlay));
     }
 }
